# FractalFreak

./: .gitignore  CMakeLists.txt  README.md  main.cpp  projekt.fbp
code/render/src/: FractalCalculations.cpp
code/ui/include/: FractalControls.h  FractalMath.h  Frame.h  projekt.h
code/ui/src/: Frame.cpp  projekt.cpp
include/: Animation.h  AnimationPath.h  AppData.h  Data.h  FractalCalculations.h  FractalGenerator.h  FractalParameters.h  FractalsDefinitions.h  Frame.h  GUI.h  MainFrame.h  Point.h  Random.h  Task.h
include/_old/: FractalCalculations.h
include/fd/: AffineFractal.h  AffineTransformation.h  FractalFactory.h  Parameters.h  PixelsGenerator.h  PointScatter.h  PointsGenerator.h  simple_fractal.h
include/ff/: Animation.h  AnimationPath.h  FractalGenerator.h  FractalParameters.h  FractalPoint.h  Frame.h  Random.h  Task.h
include/fractalAnimation/: Animation.h  AnimationPath.h  FractalGenerator.h  FractalParameters.h  FractalPoint.h  Frame.h  Random.h  Task.h
include/fractalDefinitions/: simple_fractal.h
include/ui/: BaseFrame.h  FractalControls.h  FramesDrawer.h  GUI_old.h  MainFrame.h  MainFrame_old.h  MainWindow.h  MyWindow.h  OldFrame.h
src/: Animation.cpp  FractalCalculations.cpp  FractalParameters.cpp  Frame.cpp  GUI.cpp  MainFrame.cpp  Task.cpp  main.cpp
src/fd/: AffineFractal.cpp  AffineFractal_PointsGenerator.cpp  FractalFactory.cpp  Parameters.cpp  PixelsGenerator.cpp  PointScatter.cpp  PointsGenerator.cpp
src/ff/: Animation.cpp  AnimationPath.cpp  FractalParameters.cpp  Frame.cpp  Random.cpp  Task.cpp
src/fractalAnimation/: Animation.cpp  AnimationPath.cpp  FractalParameters.cpp  Frame.cpp  Random.cpp  Task.cpp
src/ui/: BaseFrame.cpp  FramesDrawer.cpp  GUI.cpp  GUI_old.cpp  MainFrame.cpp  MainFrame_old.cpp  MainWindow.cpp  MainWindow_FileOperations.cpp  MainWindow_onFileLoad.cpp  MyWindow.cpp  OldFrame.cpp
